<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_circle">

        <ImageView
            android:id="@+id/iv_lock"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/lock"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iv_ok"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerInParent="true"
            android:alpha="0"
            android:scaleX="0"
            android:scaleY="0"
            android:tint="#66e75d"
            app:srcCompat="@drawable/confirm"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_input_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:letterSpacing="0.02"
        android:textColor="#fff"
        android:textSize="16sp" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginTop="32dp">

        <View
            android:id="@+id/cursor"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#fff"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/layout_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal" />
    </FrameLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:background="@drawable/lock_bg_white"
        android:orientation="vertical"
        android:paddingTop="48dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/number1"
                style="@style/NumberInPasswordBlend"
                android:text="@string/one" />

            <TextView
                android:id="@+id/number2"
                style="@style/NumberInPasswordBlend"
                android:text="@string/two" />

            <TextView
                android:id="@+id/number3"
                style="@style/NumberInPasswordBlend"
                android:text="@string/three" />

            <TextView
                android:id="@+id/number4"
                style="@style/NumberInPasswordBlend"
                android:text="@string/four" />

            <TextView
                android:id="@+id/number5"
                style="@style/NumberInPasswordBlend"
                android:text="@string/five" />

            <TextView
                android:id="@+id/number6"
                style="@style/NumberInPasswordBlend"
                android:text="@string/six" />

            <TextView
                android:id="@+id/number7"
                style="@style/NumberInPasswordBlend"
                android:text="@string/seven" />

            <TextView
                android:id="@+id/number8"
                style="@style/NumberInPasswordBlend"
                android:text="@string/eight" />

            <TextView
                android:id="@+id/number9"
                style="@style/NumberInPasswordBlend"
                android:text="@string/nine" />

            <TextView
                android:id="@+id/number0"
                style="@style/NumberInPasswordBlend"
                android:text="@string/zero" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/letterQ"
                style="@style/NumberInPasswordBlend"
                android:text="@string/q" />

            <TextView
                android:id="@+id/letterW"
                style="@style/NumberInPasswordBlend"
                android:text="@string/w" />

            <TextView
                android:id="@+id/letterE"
                style="@style/NumberInPasswordBlend"
                android:text="@string/e" />

            <TextView
                android:id="@+id/letterR"
                style="@style/NumberInPasswordBlend"
                android:text="@string/r" />

            <TextView
                android:id="@+id/letterT"
                style="@style/NumberInPasswordBlend"
                android:text="@string/t" />

            <TextView
                android:id="@+id/letterY"
                style="@style/NumberInPasswordBlend"
                android:text="@string/y" />

            <TextView
                android:id="@+id/letterU"
                style="@style/NumberInPasswordBlend"
                android:text="@string/u" />

            <TextView
                android:id="@+id/letterI"
                style="@style/NumberInPasswordBlend"
                android:text="@string/i" />

            <TextView
                android:id="@+id/letterO"
                style="@style/NumberInPasswordBlend"
                android:text="@string/o" />

            <TextView
                android:id="@+id/letterP"
                style="@style/NumberInPasswordBlend"
                android:text="@string/p" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/blendChange"
                style="@style/NumberInPasswordBlend"
                android:textStyle="italic|bold"
                android:text="@string/lowercase" />

            <TextView
                android:id="@+id/letterA"
                style="@style/NumberInPasswordBlend"
                android:text="@string/a" />

            <TextView
                android:id="@+id/letterS"
                style="@style/NumberInPasswordBlend"
                android:text="@string/s" />

            <TextView
                android:id="@+id/letterD"
                style="@style/NumberInPasswordBlend"
                android:text="@string/d" />

            <TextView
                android:id="@+id/letterF"
                style="@style/NumberInPasswordBlend"
                android:text="@string/f" />

            <TextView
                android:id="@+id/letterG"
                style="@style/NumberInPasswordBlend"
                android:text="@string/g" />

            <TextView
                android:id="@+id/letterH"
                style="@style/NumberInPasswordBlend"
                android:text="@string/h" />

            <TextView
                android:id="@+id/letterJ"
                style="@style/NumberInPasswordBlend"
                android:text="@string/j" />

            <TextView
                android:id="@+id/letterK"
                style="@style/NumberInPasswordBlend"
                android:text="@string/k" />

            <TextView
                android:id="@+id/letterL"
                style="@style/NumberInPasswordBlend"
                android:text="@string/l" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/blendB"
                style="@style/NumberInPasswordBlend"
                android:scaleType="centerInside"
                android:tint="#FF8A8A8A"
                app:srcCompat="@drawable/backspace"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/letterZ"
                style="@style/NumberInPasswordBlend"
                android:text="@string/z" />

            <TextView
                android:id="@+id/letterX"
                style="@style/NumberInPasswordBlend"
                android:text="@string/x" />

            <TextView
                android:id="@+id/letterC"
                style="@style/NumberInPasswordBlend"
                android:text="@string/c" />

            <TextView
                android:id="@+id/letterV"
                style="@style/NumberInPasswordBlend"
                android:text="@string/v" />

            <TextView
                android:id="@+id/letterB"
                style="@style/NumberInPasswordBlend"
                android:text="@string/b" />

            <TextView
                android:id="@+id/letterN"
                style="@style/NumberInPasswordBlend"
                android:text="@string/n" />

            <TextView
                android:id="@+id/letterM"
                style="@style/NumberInPasswordBlend"
                android:text="@string/m" />

            <ImageView
                android:id="@+id/blendOK"
                style="@style/NumberInPasswordBlend"
                android:scaleType="centerInside"
                android:tint="#FF8A8A8A"
                app:srcCompat="@drawable/confirm"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>