<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_circle">

        <ImageView
            android:id="@+id/iv_lock"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/lock"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iv_ok"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerInParent="true"
            android:alpha="0"
            android:scaleX="0"
            android:scaleY="0"
            android:tint="#66e75d"
            app:srcCompat="@drawable/confirm"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_input_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:letterSpacing="0.02"
        android:textColor="#fff"
        android:textSize="16sp" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginTop="32dp">

        <View
            android:id="@+id/cursor"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#fff"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/layout_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal" />
    </FrameLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:background="@drawable/lock_bg_white"
        android:paddingTop="48dp"
        android:paddingLeft="48dp"
        android:paddingRight="48dp">

        <TextView
            android:id="@+id/number1"
            style="@style/NumberInPasswordNumber"
            android:layout_alignParentStart="true"
            android:text="@string/one" />

        <TextView
            android:id="@+id/number2"
            style="@style/NumberInPasswordNumber"
            android:layout_centerHorizontal="true"
            android:text="@string/two" />

        <TextView
            android:id="@+id/number3"
            style="@style/NumberInPasswordNumber"
            android:layout_alignParentEnd="true"
            android:text="@string/three" />

        <TextView
            android:id="@+id/number4"
            style="@style/NumberInPasswordNumber"
            android:layout_below="@id/number1"
            android:layout_alignParentStart="true"
            android:text="@string/four" />

        <TextView
            android:id="@+id/number5"
            style="@style/NumberInPasswordNumber"
            android:layout_below="@id/number1"
            android:layout_centerHorizontal="true"
            android:text="@string/five" />

        <TextView
            android:id="@+id/number6"
            style="@style/NumberInPasswordNumber"
            android:layout_below="@id/number1"
            android:layout_alignParentEnd="true"
            android:text="@string/six" />

        <TextView
            android:id="@+id/number7"
            style="@style/NumberInPasswordNumber"
            android:layout_below="@id/number4"
            android:layout_alignParentStart="true"
            android:text="@string/seven" />

        <TextView
            android:id="@+id/number8"
            style="@style/NumberInPasswordNumber"
            android:layout_below="@id/number4"
            android:layout_centerHorizontal="true"
            android:text="@string/eight" />

        <TextView
            android:id="@+id/number9"
            style="@style/NumberInPasswordNumber"
            android:layout_below="@id/number4"
            android:layout_alignParentEnd="true"
            android:text="@string/nine" />

        <ImageView
            android:id="@+id/numberB"
            style="@style/NumberInPasswordNumber"
            android:layout_below="@id/number7"
            android:layout_alignParentEnd="true"
            android:scaleType="centerInside"
            android:tint="#FF8A8A8A"
            app:srcCompat="@drawable/backspace"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/number0"
            style="@style/NumberInPasswordNumber"
            android:layout_below="@id/number7"
            android:layout_centerHorizontal="true"
            android:text="@string/zero" />

        <ImageView
            android:id="@+id/numberOK"
            style="@style/NumberInPasswordNumber"
            android:layout_below="@id/number7"
            android:layout_alignParentStart="true"
            android:scaleType="centerInside"
            android:tint="#FF8A8A8A"
            app:srcCompat="@drawable/confirm"
            tools:ignore="ContentDescription" />
    </RelativeLayout>
</LinearLayout>